{{$NEXT}}

1.0       2012-03-27 12:32:30 Europe/London
- first non-devel release

0.1_02    2012-03-25 10:55:56 Europe/London
- add non-auto-detected test deps

0.1_01    2012-03-14 12:08:59 Europe/London
- Initial release
